--- a/phylobook/projects/templates/displayproject.html
+++ b/phylobook/projects/templates/displayproject.html
@@ -12,10 +12,18 @@
     <script type="text/javascript">
         var token = '{{csrf_token}}';
         var projectName = '{{ project }}';
+
         {% if settings.ANNOTATION_COLORS %}
         // Annotation Colors Set
         const annotationColors = [{% for color in settings.ANNOTATION_COLORS %}{{ "{" }}name:"{{ color.name }}", short:"{{ color.short }}", value:"{{ color.value }}"{{ "}" }},
                                   {% endfor %}
+        ]
+        {% endif %}
+
+        {% if settings.SEQUENCE_ANNOTATION_COLORS %}
+        // Sequence Annotation Colors Set (The colors for the texts)
+        const sequenceAnnotationColors = [{% for color in settings.SEQUENCE_ANNOTATION_COLORS %}{{ "{" }}name:"{{ color.name }}", value:"{{ color.value }}"{{ "}" }},
+                                         {% endfor %}
         ]
         {% endif %}
         
@@ -216,7 +224,7 @@
 
         <!-- Generic modal for annotations -->
         <div class="modal fade" id="annotations_modal" tabindex="-1" role="dialog" aria-labelledby="annotations" aria-hidden="true">
-            <div class="modal-dialog" role="document">
+            <div class="modal-dialog modal-dialog-scrollable" role="document">
               <div class="modal-content">
                 <div class="modal-header">
                   <h5 class="modal-title" id="annotations_modal_title">Modal title</h5>
@@ -229,7 +237,7 @@
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                  <button type="button" class="btn btn-primary">Save changes</button>
+                  <button type="button" class="btn btn-primary" id="annotations_modal_button">Save changes</button>
                 </div>
               </div>
             </div>
