--- a/phylobook/templates/base.html
+++ b/phylobook/templates/base.html
@@ -13,12 +13,14 @@
         <link rel="stylesheet" href="{% static 'css/jquery-ui.css' %}" />
         <link rel="stylesheet" href="{% static 'css/jquery-ui.theme.css' %}" />
         <link rel="stylesheet" href="{% static 'css/phylobook.css' %}" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/css/bootstrap-select.min.css">
 
         <script src="{% static 'script/jquery-3.4.1.min.js' %}"></script>
         <script src="{% static 'script/jquery-ui.js' %}"></script>
         <script src="{% static 'script/bootstrap.bundle.min.js' %}"></script>
         <script src="{% static 'script/tinymce.min.js' %}"></script>
         <script src="{% static 'script/d3.min.js' %}"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
 
         <title>Phylobook</title>
     </head>
